--- a/stylecontactus.css
+++ b/stylecontactus.css
@@ -49,7 +49,8 @@ body {
   #topblock {
     width: 100%;
     height: 15vw;
-    background-color: lightskyblue;
+    background-color: #507ab9;
+    color: rgb(247, 246, 246);
     font-family: "Noto Sans TC";
     font-size: 4vw;
     font-weight: 600;
